# CoreDump

./: CoreDump.cabal  LICENSE  README.markdown
src/: CoreDump.hs
src/CoreDump/: Show.hs
