name:                CoreDump
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     CoreDump
  other-modules:       CoreDump.Show
  -- other-extensions:
  build-depends:
    base >= 4.8 && < 4.9,
    ghc  >= 7.10 && < 8,
    haskell-src-exts
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
